--- a/Flutter/TOC.html
+++ b/Flutter/TOC.html
@@ -34,6 +34,7 @@
 			<a href="Basics/TOC.html">Hello World</a>
 			<a href="Basics/TOC.html">Stateful Widget</a>
 			<a href="Basics/TOC.html">Stateless Widget</a>
+			<a href="Basics/ConnectMobileDeviceThroughWifi.html">Connect Mobile Device Through Wifi</a>
 		</div>
 	</div>
 
