--- a/CSS/Selector.html
+++ b/CSS/Selector.html
@@ -4,41 +4,37 @@
 	<title>Selector</title>
 	<link rel="stylesheet" type="text/css" href="../Assets/bulma.css">
 	<link rel="stylesheet" type="text/css" href="../Assets/Style.css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.8.4/prism.min.js"></script>
-	<script type="text/javascript" src="../Assets/jquery.min.js"></script>
-  <link rel="stylesheet" href="../Assets/prism-dark.css">
 </head>
 <body class="Body">
-<style type="text/css">
-h1{
-	margin-bottom: 0;
-}
-p{
-	margin-top: 0;
-}
-</style>
-<div class="Content Card">
+<div class="page card">
 
+<h1>CSS Selectors</h1>
+<p>CSS selectors are used to "find" (or select) the HTML elements you want to style. We can divide CSS selectors into five categories:</p>
+<ol type="1">
+	<li>Simple selectors (select elements based on name, id, class)</li>
+	<li>Combinator selectors (select elements based on a specific relationship between them)</li>
+	<li>Pseudo-class selectors (select elements based on a certain state)</li>
+	<li>Pseudo-elements selectors (select and style a part of an element)</li>
+	<li>Attribute selectors (select elements based on an attribute or attribute value)</li>
+</ol>
+<h2>Class selectors (.className)</h2>
+<p>To select an element with class name use <code>.className</code>. For example, the class <code>boxy</code> gets applied to the element who's one of the class contains <code>boxy</code>.</p>
 
-<h1>Selectors</h1>
-<h1 style="margin-bottom: 0;">.className</h1>
-<p>Selects all elements with <code>class="boxy"</code></p>
 <pre>
+.boxy{
+	width: 100px;
+	height : 100px;
+	background-color : red;
+	margin : 10px;
+	display : inline-block;
+}
 
-	.boxy{
-		width: 100px;
-		height : 100px;
-		background-color : red;
-		margin : 10px;
-		display : inline-block;
-	}
-
-	&lt;div class="box">
-		&lt;div class="boxy">&lt;/div>
-		&lt;div class="boxy">&lt;/div>
-	&lt;/div>
-
+&lt;div class="box">
+	&lt;div class="boxy">&lt;/div>
+	&lt;div class="boxy">&lt;/div>
+&lt;/div>
 </pre>
+
 <style type="text/css">
 	.boxy{
 		width: 100px;
@@ -53,34 +49,30 @@ p{
   <div class="boxy"></div>
 </div>
 
-
-
-
-<h1>#idName</h1>
-<p>Selects the element with <code>id="firstname"</code></p>
+<h2>ID selectors (#idName)</h2>
+<p>To select an element with the id name, use <code>#idName</code> syntax.</p>
 <pre>
+#boxy1{
+	width: 100px;
+	height : 100px;
+	background-color : red;
+	margin : 10px;
+	display : inline-block;
+}
+#boxy2{
+	width: 100px;
+	height : 100px;
+	background-color : blue;
+	margin : 10px;
+	display : inline-block;
+}
 
-	#boxy1{
-	  width: 100px;
-	  height : 100px;
-	  background-color : red;
-	  margin : 10px;
-	  display : inline-block;
-	}
-	#boxy2{
-	  width: 100px;
-	  height : 100px;
-	  background-color : red;
-	  margin : 10px;
-	  display : inline-block;
-	}
-
-	&lt;div class="box">
-		&lt;div id="boxy1">&lt;/div>
-		&lt;div id="boxy2">&lt;/div>
-	&lt;/div>
-
+&lt;div class="box">
+	&lt;div id="boxy1">&lt;/div>
+	&lt;div id="boxy2">&lt;/div>
+&lt;/div>
 </pre>
+
 <style type="text/css">
 #boxy1{
   width: 100px;
@@ -92,7 +84,7 @@ p{
 #boxy2{
   width: 100px;
   height : 100px;
-  background-color : red;
+  background-color : blue;
   margin : 10px;
   display : inline-block;
 }
@@ -104,192 +96,191 @@ p{
 
 
 
-<h1 style="margin-bottom: 0;">*</h1>
-<p style="margin-top: 0;">Selects all element in the document.</p>
+<h2>The universal selector (*)</h2>
+<p>Selects all element in the document. The symbol * is used to specify all elements. For example, the following css gets applied to all elements in the document.</p>
 <pre>
+*{
+	font-size : 15px;
+	box-sizing : border-box;
+}
+</pre>
+<p>The following example shows how to select all element inside a class:</p>
+<pre>
+.boxy *{
+	font-size : 15px;
+	box-sizing : border-box;
+}
+</pre>
+<p>The following example shows how to select all element inside an element with id:</p>
+<pre>
+#idName *{
+	font-size : 15px;
+	box-sizing : border-box;
+}
+</pre>
 
-	*{
-	  font-size : 15px;
-	  box-sizing : border-box;
-	}
 
+<h2>Element Selectors (element)</h2>
+<p>You can select an element by its element name. For example to color all paragraph, you can use following code:</p>
+<pre>
+p{
+	font-weight: bold;
+	font-size : 19px;
+	color : blue;
+}
+</pre>
+<p>To color heading use the following code:</p>
+<pre>
+h1{
+	font-weight: bold;
+	font-size : 19px;
+	color : blue;
+}
+</pre>
+
+
+<h2>selector1.selector2</h2>
+<p>When two selector is combined with a single dot operator, then both selector should be present on the same HTML element to be able to match.</p>
+<p>For example, the following example will match those <code>h1</code> element whose one of the classname is <code>fontStyle</code>.</p>
+<pre>
+h1.fontStyle{
+	color : red;
+}
+</pre>
+<p>For example, the following example will match those element which has both class <code>expired</code> and <code>fontStyle</code></p>
+<pre>
+.expired.fontStyle{
+	color : red;
+}
+</pre>
+<p>For example, the following example will match those element which has id <code>expired</code> and class <code>fontStyle</code></p>
+<pre>
+#expired.fontStyle{
+	color : red;
+}
 </pre>
 
 
 
-<h1>element</h1>
-<p>Selects all matching element.</p>
-<p>In the above example it selects all <code>p</code> elements - </p>
+<h2>selector1, selector2</h2>
+<p>If you want to apply some common css rules to different selectors, you can use multiple selectors seperated by comma.</p>
+<p>Example, the following css rules will be applied to both class <code>red_text</code> and <code>danger_text</code>:</p>
 <pre>
-
-	p{
-		font-weight: bold;
-		font-size : 19px;
-		color : blue;
-	}
-
+.red_text, .danger_text{
+	color : red;
+}
+</pre>
+<p>In the example below, all paragraph and heading will have margin bottom of <code>10px</code>:</p>
+<pre>	
+p, h1{
+	margin-bottom : 10px;
+}
 </pre>
 
 
-
-<h1>element.class</h1>
-<p>You might want to apply the same CSS class to multiple element. for example, you might want to apply <code>fontStyle</code> class to p and h1 element. But you want to select only fontStyle class of h1 element.</p>
+<h2>selector1 selector2</h2>
+<p>When two selectors are seperated by space, then the second selector should be the child of first selector, in order to be able to match. This type of selector is called, Descendant Selector. The word Descendant indicates nested anywhere in the DOM tree. It can be a direct child or deeper than five levels, but it will still be referred to as a descendant.</p>
+<p>For example, the following example will select element with class <code>element2</code> and it must be child of class <code>element1</code></p>
 <pre>
-
-	h1.fontStyle{
-		color : red;
-	}
-
+.element1 .element2{
+	line-height : 18px;
+}
 </pre>
-<p>Selects all elements with the class fontStyle and element is <code>h1</code></p>
-
-
-
-
-<h1>element1, element2</h1>
-<p>It applies the common CSS rules to all matching element1 and element2.</p>
+<p>In the following example, all the <code>p</code> element will be selected whose ancestor <code>div</code> element has class <code>hello</code>.</p>
 <pre>
-
-	element1, element2{
-		color : red;
-	}
-
-	// Example --
-	p, h1{
-		margin : 0;
-	}
-
-</pre>
-<p>In the above example, the CSS rule will be applied to both the <code>p</code> and <code>h1</code> element.</p>
-
-
-
-
-<h1>element1 element2</h1>
-<p>This is also called <code>Descendant Selector</code></p>
-<pre>
-
-	element1 element2{
-		line-height : 18px;
-	}
-
-	// Example -
-
-	div.hello p{
-		line-height : 18px;
-	}
-
-</pre>
-<p>In the above example, all the <code>p</code> element will be selected whose ancestor has class <code>hello</code></p>
-
-
-
-
-
-<h1>element1 > element2</h1>
-<p>This is also called <code>Child Selector</code></p>
-<p>Select all element2 whose parent element is element1. It means element2 are the child of element1.</p>
-<p>In the following example, it selects and style every <code>&lt;p></code> element where the parent is a <code>&lt;div></code> element:</p>
-<pre>
-
-	element1 > element2 { 
-		background-color: yellow;
-	}
-
-	// Example -
-
-	div > p { 
-		background-color: yellow;
-	}
-
+div.hello p{
+	line-height : 18px;
+}
 </pre>
 
 
 
 
-<h1>element1 + element2</h1>
-<p>This is also called <code>Adjacent Sibling Selector</code></p>
-<p>Selects all the element2 that is immediately placed after element1.</p>
+
+<h2>selector1 > selector2</h2>
+<p>This is also called <code>Child Selector</code>. Elements matched by the second selector must be the immediate children of the elements matched by the first selector.</p>
+<p>In the following example, it selects all element with class <code>element2</code> and its immediate parent class is <code>element1</code>.</p>
 <pre>
-
-	element1 + element2{ 
-		// CSS rules
-	}
-
-	// Example --
-
-	h1 + p { 
-		background-color: yellow;
-	}
-
+.element1 > .element2 { 
+	background-color: yellow;
+}
 </pre>
-<p>The above example will select all the first paragraph after the h1 element.</p>
-
-
-
-
-
-<h1>element1 ~ element2</h1>
-<p>This is also called <code>General Sibling Selector</code></p>
-<p>The element1~element2 selector matches occurrences of element2 that are preceded by element1.</p>
-<p>Selects all element2 that are preceed by the element1. Both elements must have the same parent, but element2 does not have to be immediately preceded by element1.</p>
+<p>The following example will match those paragraph <code>p</code> element, which are direct children of <code>div</code> element.</p>
 <pre>
-	element1 ~ element2{
-		background : red;
-	}
-
-	// Example 1 -
-
-	p~ul{
-		background-color : red;
-	}
-
-	&lt;div class="box">
-		&lt;div>A div element.&lt;/div>
-	&lt;ul>
-		&lt;li>Coffee&lt;/li>
-		&lt;li>Tea&lt;/li>
-		&lt;li>Milk&lt;/li>
-	&lt;/ul>
-
-	&lt;p>The first paragraph.&lt;/p>
-	&lt;ul>
-		&lt;li>Coffee&lt;/li>
-		&lt;li>Tea&lt;/li>
-		&lt;li>Milk&lt;/li>
-	&lt;/ul>
-
-	&lt;h2>Another list&lt;/h2>
-	&lt;ul>
-		&lt;li>Coffee&lt;/li>
-		&lt;li>Tea&lt;/li>
-		&lt;li>Milk&lt;/li>
-	&lt;/ul>
-	&lt;/div>
-
+div > p { 
+	background-color: yellow;
+}
 </pre>
-<p>The above example will make the background color red to the second and last ul element.</p>
+
+
+
+
+<h2>selector1 + selector2</h2>
+<p>This is also called <code>Adjacent Sibling Selector</code>. Elements with <code>selector2</code> must be immediate sibling of <code>selector1</code>. That means <code>selector1</code> element should come first and then <code>selector2</code> element.</p>
+<p>The following example will match those element which has class <code>.element2</code> and its previous element has class <code>element1</code>.</p>
+<pre>
+.element1 + .element2{ 
+	// CSS rules
+}
+</pre>
+<p>The following example will match those <code>p</code> element whose previous sibling element is <code>h1</code>. That means, it will select all the first paragraph after the h1 element.</p>
+<pre>
+h1 + p { 
+	background-color: yellow;
+}
+</pre>
 
 
 
 
 
-<h1>[attribute]</h1>
+<h2>selector1 ~ selector2</h2>
+<p>This is also called <code>General Sibling Selector</code>. The <code>selector1~selector2</code> selector matches occurrences of <code>selector2</code> that are preceded by <code>selector1</code>. 
+Selects all <code>selector2</code> that are preceed by the <code>selector1</code>. Both elements must have the same parent, but <code>selector2</code> does not have to be immediately preceded by <code>selector1</code>.</p>
+<pre>
+element1 ~ element2{
+	background : red;
+}
+</pre>
+<p>The following example will make the background color red to both ul element.</p>
+<pre>
+p~ul{
+	background-color : red;
+}
+
+&lt;p>The first paragraph.&lt;/p>
+&lt;ul>
+	&lt;li>Coffee&lt;/li>
+	&lt;li>Tea&lt;/li>
+	&lt;li>Milk&lt;/li>
+&lt;/ul>
+
+&lt;h2>Another list&lt;/h2>
+&lt;ul>
+	&lt;li>Coffee&lt;/li>
+	&lt;li>Tea&lt;/li>
+	&lt;li>Milk&lt;/li>
+&lt;/ul>
+</pre>
+
+
+
+
+
+<h2>[attribute]</h2>
 <p>The [attribute] selector is used to select elements with the specified attribute.</p>
+<p>The following example selects all the element whose one of the attribute is <code>href</code>.</p>
 <pre>
-
-	[attribute]{
-		color : yellow;
-	}
-
-	// Example --
-
-	[target]{
-		color : red;
-	}
-
+[href]{
+	color : yellow;
+}
 </pre>
-<p>The above example selects all the element whose one of the attribute is <code>target</code></p>
+<p>The following example selects all the element whose one of the attribute is <code>target</code>.</p>
+<pre>
+[target]{
+	color : red;
+}
+</pre>
 
 
 
@@ -297,45 +288,40 @@ p{
 
 
 
-<h1>[attribute=value]</h1>
+<h2>[attribute=value]</h2>
 <p>The <code>[attribute=value]</code> selector is used to select elements with the specified attribute and value.</p>
 <pre>
-
-	[attribute = value] {
-		css declarations;
-	}
-
-	// Example --
-
-	[type=text] {
-		color : green;
-	}
-
+[attribute = value] {
+	css declarations;
+}
 </pre>
-<p>The above example selects all the element whose one of the attribute is <code>type</code> and it has the value <code>text</code></p>
+<p>The following example matches element with <code>target='_blank'</code> attribute.</p>
 <pre>
-
-	input[type=text] {
-	    width: 100px;
-	    transition: ease-in-out, width .35s ease-in-out;
-	}
-
-	input[type=text]:focus {
-	    width: 250px;
-	}
-
+[target=_blank] {
+	color : green;
+}
+</pre>
+<p>The following example selects all the <code>input</code> element whose one of the attribute is <code>type</code> and it has the value <code>text</code>.</p>
+<pre>
+input[type=text] {
+	width: 100px;
+	transition: ease-in-out, width .35s ease-in-out;
+}
+input[type=text]:focus {
+	width: 250px;
+}
 </pre>
 
 
 <h1>Combinators</h1>
-<p>A CSS selector can contain more than one simple selector. Between the simple selectors, we can include a combinator.</p>
+<p>A CSS combinator is a type of selector in CSS which is used to specify the relationship between exactly two CSS selectors. It essentially combines two CSS selectors to uniquely identify an element in a document.</p>
 <p>There are four different combinators in CSS:</p>
-<ul>
+<ol type="1">
 	<li>descendant selector (space)</li>
 	<li>child selector (>)</li>
 	<li>adjacent sibling selector (+)</li>
 	<li>general sibling selector (~)</li>
-</ul>
+</ol>
 
 
 
@@ -345,81 +331,53 @@ p{
 <p>If there are two or more conflicting CSS rules that point to the same element, the browser follows some rules to determine which one is most specific and therefore wins out. Think of specificity as a score/rank that determines which style declarations are ultimately applied to an element. The universal selector (*) has low specificity, while ID selectors are highly specific! </p>
 <p><em>Specificity is a common reason why your CSS-rules don't apply to some elements, although you think they should.</em></p>
 <p>Every selector has its place in the specificity hierarchy. There are four categories which define the specificity level of a selector:</p>
-<ul>
+<ol type="1">
 	<li><code>Inline styles</code> An inline style is attached directly to the element to be styled. Example: <code>&lt;h1 style="color: #ffffff;"></code>.</li>
-	<li><code>IDs</code> An ID is a unique identifier for the page elements, such as #navbar.</li>
-	<li><code>Classes, attributes and pseudo-classes</code> This category includes .classes, [attributes] and pseudo-classes such as :hover, :focus etc.</li>
-	<li><code>Elements and pseudo-elements</code> This category includes element names and pseudo-elements, such as h1, div, :before and :after.</li>
-</ul>
+	<li><code>IDs</code> An ID is a unique identifier for the page elements, such as <code>#navbar</code>.</li>
+	<li><code>Classes, attributes and pseudo-classes</code> This category includes <code>.classes</code>, <code>[attributes]</code> and pseudo-classes such as <code>:hover</code>, <code>:focus</code> etc.</li>
+	<li><code>Elements and pseudo-elements</code> This category includes element names and pseudo-elements, such as <code>h1</code>, <code>div</code>, <code>:before</code> and <code>:after</code>.</li>
+</ol>
+<p>In the following example, the background color pink will take the priority.</p>
 <pre>
+#one{
+	background-color : pink;
+}
+.one{
+	width: 300px;
+	background-color : red;
+	float  : left;
+	height : 300px;
+}
 
-	#one{
-	  background-color : pink;
-	}
-	.one{
-	  width: 300px;
-	  background-color : red;
-	  float  : left;
-	  height : 300px;
-	}
-
-	&lt;div id="one" class="one">&lt;/div>
+&lt;div id="one" class="one">&lt;/div>
 </pre>
-<p>The background color will be pink.</p>
-<h3>Equal Specificity</h3>
-<p>If the same rule is written twice into the external style sheet, then the lower rule in the style sheet is closer to the element to be styled, and therefore will be applied:</p>
+
+<h2>Equal Specificity</h2>
+<p>If the same rule is written twice into the external style sheet, then the lower rule in the style sheet is closer to the element to be styled, and therefore will be applied. In the following example, background color red gets applied. Which means, the last one gets applied.</p>
 <pre>
-
-	h1 {background-color: yellow;}
-	h1 {background-color: red;}
-
+h1 {background-color: yellow;}
+h1 {background-color: red;}
 </pre>
-<p>The latter rule is always applied.</p>
+<p>In the following example, the first rule is more specific than the other two, and will be applied.</p>
 <pre>
-
-	div#a {background-color: green;}
-	#a {background-color: yellow;}
-	div[id=a] {background-color: blue;}
-
+div#a {background-color: green;}
+#a {background-color: yellow;}
+div[id=a] {background-color: blue;}
 </pre>
-<p>The first rule is more specific than the other two, and will be applied.</p>
-<h3>Different File</h3>
-<p>If your external style sheet contains the same selector as in your main file where you are importing the external file, then the one which is defined in the main file will be used, and the same style from the external file will be ignored.</p>
+
+<h2>Different File</h2>
+<p>If your external style sheet contains the same selector as in your main file where you are importing the external file, then the one which is defined in the main file will be used, and the same style from the external file will be ignored. In the example below, background color yellow will take the priority and will be applied.</p>
 <pre>
+// From external CSS file:
+#content h1 {background-color: red;}
 
-	// From external CSS file:
-	#content h1 {background-color: red;}
-
-	// In HTML file:
-	&lt;style>
-	#content h1 {
-	    background-color: yellow;
-	}
-	&lt;/style>
-
+// In HTML file:
+&lt;style>
+#content h1 {
+	background-color: yellow;
+}
+&lt;/style>
 </pre>
-<p>The latter rule will be applied.</p>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
