--- a/CSS/TOC.html
+++ b/CSS/TOC.html
@@ -4,36 +4,75 @@
 	<title>CSS Tutorial</title>
 	<link rel="stylesheet" type="text/css" href="../Assets/bulma.css">
 	<link rel="stylesheet" type="text/css" href="../Assets/Style.css">
-	<script src="../Assets/prism.min.js"></script>
-	<script type="text/javascript" src="../Assets/jquery.min.js"></script>
-	<link rel="stylesheet" href="../Assets/prism-dark.css">
-	<style type="text/css">
-		.Content{
-			display: flex;
-			flex-flow: row wrap;
-		}
-		.Content a{
-			margin: 5px;
-			padding: 5px;
-			border: 1px solid #ccc;
-		}
-		.Content{
-			padding: 0 !important;
-		}
-		h1{
-			font-size: 16px;
-			margin: 0;
-		}
-	</style>
 </head>
 <body class="Body">
 
-	<div class="Skipping">
-		<div class="vertical-menu">
-			<a href="Skipping.html" class="active">Skipping</a>
+	<div class="card table_of_content">
+		<h1>Basics</h1>
+		<div>
+			<ul>
+				<li><a href="Syntax.html">Basic syntax for writting CSS Code</a></li>
+				<li><a href="Inclusion.html">Inclusion : Different ways of using CSS</a></li>
+				<li><a href="Selector.html">CSS Selectors, Combinators and Specificity</a></li>
+				<li><a href="Units.html">Units</a><br></li>
+			</ul>
 		</div>
 	</div>
 
+	<div class="card table_of_content">
+		<h1>Typography</h1>
+		<div>
+			<ol>
+				<li>
+					<a href="Colors.html">Color & Opacity</a>
+					<p class="small_desc">Learn how you can use color and how color values are specified in CSS. Learn about Opacity and the danger of using Opacity.</p>
+					<div class="tags">
+						<div>Color Name</div>
+						<div>Hexadecimal Color</div>
+						<div>3 Digit Hexadecimal Color</div>
+						<div>8 Digit Hexadecimal Color</div>
+						<div>RGB</div>
+						<div>RGBA</div>
+						<div>Forground and Background</div>
+						<div>Opacity</div>
+					</div>
+				</li>
+				<li>
+					<a href="Underline.html">Text Underline</a>
+					<p class="small_desc">Learn how you can set underline, or overline or strike-through line on the text and different ways to customize them, like setting color, thickness, offset etc.</p>
+					<div class="tags">
+						<div>text-decoration-line</div>
+						<div>text-decoration-style</div>
+						<div>text-decoration-color</div>
+						<div>text-decoration-thickness</div>
+						<div>text-underline-position</div>
+						<div>text-underline-offset</div>
+						<div>text-decoration</div>
+					</div>
+				</li>
+				<li>
+					<a href="Typography.html">Text Styling</a>
+					<p class="small_desc">Learn what you can do with text.</p>
+					<div class="tags">
+						<div>color</div>
+						<div>text-align</div>
+						<div>text-transform</div>
+						<div>text-indent</div>
+						<div>letter-spacing</div>
+						<div>line-height</div>
+						<div>word-spacing</div>
+						<div>text-overflow</div>
+						<div>word-wrap</div>
+						<div>word-break</div>
+						<div>white-space</div>
+						<div>caret-color</div>
+						<div>quotes</div>
+					</div>
+				</li>
+				<li><a href="Fonts.html">font-style</a></li>
+			</ol>
+		</div>
+	</div>
 
 	<div class="Card">
 		<h1>Grid</h1>
@@ -383,49 +422,6 @@
 	</div>
 
 	<div class="Card">
-		<h1>Fonts</h1>
-		<div class="Content">
-			<a href="Fonts.html">font-style</a>
-			<a href="Fonts.html">font-size</a>
-			<a href="Fonts.html">font-family</a>
-			<a href="Fonts.html">font-variant</a>
-			<a href="Fonts.html">font-weight</a>
-			<a href="Fonts.html">font</a>
-			<a href="Fonts.html">Web Font</a>
-			<a href="Fonts.html">@font-face</a>
-			<a href="Fonts.html">src</a>
-		</div>
-	</div>
-
-	<div class="Card">
-		<h1>Text</h1>
-		<div class="Content">
-			<a href="Typography.html">text-color</a>
-			<a href="Typography.html">text-align</a>
-			<a href="Typography.html">text-decoration</a>
-			<a href="Typography.html">text-transform</a>
-			<a href="Typography.html">text-indent</a>
-			<a href="Typography.html">letter-spacing</a>
-			<a href="Typography.html">word-spacing</a>
-			<a href="Typography.html">line-height</a>
-			<a href="Typography.html">text-overflow</a>
-			<a href="Typography.html">word-break</a>
-			<a href="Typography.html">word-wrap</a>
-			<a href="Typography.html">white-space</a>
-			<a href="Typography.html">Quotes</a>
-			<a href="Typography.html">caret-color</a>
-		</div>
-	</div>
-
-	<div class="Card">
-		<h1>Color</h1>
-		<div class="Content">
-			<a href="Colors.html">color</a>
-			<a href="Colors.html">opacity</a>
-		</div>
-	</div>
-
-	<div class="Card">
 		<h1>Dimension</h1>
 		<div class="Content">
 			<a href="Dimension.html">height</a>
@@ -488,27 +484,12 @@
 		</div>
 	</div>
 
-	<div class="Card">
-		<h1>Units</h1>
-		<div class="Content">
-			<a href="Units.html">Units</a><br>
+	
+	<div class="Skipping">
+		<div class="vertical-menu">
+			<a href="Skipping.html" class="active">Skipping</a>
 		</div>
 	</div>
-
-	<div class="Card">
-		<h1>Selector</h1>
-		<div class="Content">
-			<a href="Selector.html">Selectors</a><br>
-			<a href="Selector.html">Combinators</a><br>
-		</div>
-	</div>
-
-	<div class="Card">
-		<h1>Basics</h1>
-		<div class="Content">
-			<a href="Inclusion.html">Inclusion</a><br>
-			<a href="Syntax.html">Syntax</a>
-		</div>
-	</div>
+	
 </body>
 </html>
