--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body class="Body">
 <div class="Content Card">
 <h1>In Progress</h1>
+	<a href="Cudos/TOC.html">Cudos</a><br>
 	<a href="Blockchain/TOC.html">Blockchain</a><br>
 	<a href="Zilliqa/TOC.html">Zilliqa</a><br>
 	<a href="Dart/TOC.html">Dart</a><br>
@@ -17,6 +18,7 @@
 	<a href="MongoDB/TOC.html">MongoDB</a><br>
 	<a href="MySQL/TOC.html">MySQL</a><br>
 	<a href="Go/TOC.html">Go</a><br>
+	<a href="Solana/TOC.html">Solana</a><br>
 	<a href="Snippets/TOC.html">HTML Snippets</a><br>
 	<br>
 	<br>
