--- a/CSS/Underline.html
+++ b/CSS/Underline.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Underline</title>
+	<title>Text Underline</title>
 	<link rel="stylesheet" type="text/css" href="../Assets/bulma.css">
 	<link rel="stylesheet" type="text/css" href="../Assets/Style.css">
 </head>
-<body class="Body">
+<body>
 <div class="page card">
 
 <h1>Underline</h1>
