--- a/CSS/BoxModel.html
+++ b/CSS/BoxModel.html
@@ -1,113 +1,170 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Syntax</title>
+	<title>Box Model</title>
 	<link rel="stylesheet" type="text/css" href="../Assets/bulma.css">
 	<link rel="stylesheet" type="text/css" href="../Assets/Style.css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.8.4/prism.min.js"></script>
-	<script type="text/javascript" src="../Assets/jquery.min.js"></script>
-  <link rel="stylesheet" href="../Assets/prism-dark.css">
 </head>
-<body class="Body">
-<div class="Content Card">
+<body>
+<div class="page card">
+
+
+
+
+
+
+
 <h1>Box Model</h1>
-<p>Every element in web design is a rectangular box.</p>
+<p>Every element in web design is a rectangular box. Box Model specifies how CSS calculates a box's width and how you can change the default behaviour. The following picture demonstrate how border, padding and content are positioned within a box.</p>
 <img src="Assets/img/firebox.png">
-<p>This is how the width and height is calculated in CSS -</p>
-<ul>
-	<li><span style="font-weight: bold;">Width</span> : width + padding-left + padding-right + border-left + border-right</li>
-	<li><span style="font-weight: bold;">Height</span>: height + padding-top + padding-bottom + border-top + border-bottom</li>
-</ul>
-<h3>The Default Width of Block Level Boxes</h3>
-<p>If you don't declare a width, and the box has static or relative positioning, the width will remain 100% in width and the padding and border will push inwards instead of outward. But if you explicitly set the width of the box to be 100%, the padding will push the box outward as normal.</p>
+<p>Following is the common formula for calculating total with of a box:</p>
+<ol>
+	<li><span style="font-weight: bold;">Total Width</span> : content width + padding-left + padding-right + border-left + border-right</li>
+	<li><span style="font-weight: bold;">Total Height</span>: content height + padding-top + padding-bottom + border-top + border-bottom</li>
+</ol>
+<p>The property <code>box-sizing</code> allows us to specify the behaviour of how our code calculates the with of a box. It has two values:</p>
+<ol>
+	<li>border-box</li>
+	<li>content-box</li>
+</ol>
+<p>If you apply <code>box-sizing</code> property, the behaviour applies to all child element inside it, unless any child element has it's own <code>box-sizing</code> value specified.</p>
 
-<p>In the following example we have a greyed box within it we have a paragraph. The 15px padding is pushed inward. Because we didn't explicitily provide the width of the container. So the padding and border will push inward. The reason is as the width is unspecified, the inner greyed box can take whatever width. It doesn't have to have a specific width. So browser do not care about it. Browser push the width and border width towards inside so that the greyed box stays fit perfectly within its container.</p>
+
+
+
+
+
+<h2>border-box</h2>
+<p>In <code>border-box</code>, if you don't declare a width of a box element, and the box has static or relative positioning, the width will remain 100% in width and the padding and border will push inwards instead of outward. To demonstrate how <code>border-box</code> behaves, consider the following example:</p>
+	<ol>
+		<li>The first div do not have width specified. So the default width is 100%. The padding and border width pushes inwards, so the actual with of the content area is less than 100%.</li>
+		<li>The second div is set with width 100%. And it is same as previous div.</li>
+		<li>The third div is set with width <code>800px</code>, but actual content area for paragraph is less than <code>800px</code>. Because within <code>800px</code>, there's left and right border width, and left and right padding is calculated. As padding is <code>50px</code> and border width is <code>10px</code>, the total width for content area would be <code>800px - (50px + 50px + 10px + 10px)</code>.</li>
+		<li>The fourth div is a <code>800px</code> line to demonstrate the masurment of the previous divs.</li>
+	</ol>
 <pre>
-	&lt;div class="box">
-		&lt;div style="background: grey; padding: 15px;">
-			&lt;p style="margin: 0; text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+&lt;div style="box-sizing: border-box;">
+	&lt;div style="background: #ddd; padding: 50px; border: 10px solid red;">
+		&lt;p style="margin: 0; text-align: justify;">
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.&lt;/p>
-		&lt;/div>
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		&lt;/p>
 	&lt;/div>
-</pre>
-<div class="box">
-	<div style="background: grey; padding: 15px;">
-		<p style="margin: 0; text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	</div>
-</div>
-<p>Okay, this is pretty ovbious. Now lets set width to 100%. For this the browser must preserve 100% of the width for the greyed container. Now if we apply padding and border to the container, it must not decrease the width. So that's why browser push the border and width outward.</p>
-<pre>
-	&lt;div class="box">
-		&lt;div style="background: grey; padding: 15px; width:100%;">
-			&lt;p style="margin: 0; text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	&lt;div class="mt-4" style="background: #ddd; padding: 50px; border: 10px solid red; width: 100%;">
+		&lt;p style="margin: 0; text-align: justify;">
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.&lt;/p>
-		&lt;/div>
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		&lt;/p>
 	&lt;/div>
+	&lt;div class="mt-4" style="background: #ddd; padding: 50px; border: 10px solid red; width: 800px;">
+		&lt;p style="margin: 0; text-align: justify;">
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		&lt;/p>
+	&lt;/div>
+	&lt;div class="mt-4 has-text-centered" style="background: green; height: 28px; width: 800px; color: #fff;">800px&lt;/div>
+&lt;/div>
 </pre>
-<div class="box">
-	<div style="background: grey; padding: 15px; width:100%;">
-		<p style="margin: 0; text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<div class="SnippetDemo">
+	<div style="box-sizing: border-box;">
+		<div style="background: #ddd; padding: 50px; border: 10px solid red;">
+			<p style="margin: 0; text-align: justify;">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+		</div>
+		<div class="mt-4" style="background: #ddd; padding: 50px; border: 10px solid red; width: 100%;">
+			<p style="margin: 0; text-align: justify;">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+		</div>
+		<div class="mt-4" style="background: #ddd; padding: 50px; border: 10px solid red; width: 800px;">
+			<p style="margin: 0; text-align: justify;">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+		</div>
+		<div class="mt-4 has-text-centered" style="background: green; height: 28px; width: 800px; color: #fff;">800px</div>
 	</div>
 </div>
-<p>The lesson here being that the default width of a box isn't really 100% but a less tangible "whatever is left". This is particularly valuable to know, since there are lots of circumstances where it is immensely useful to either set or not set a width.</p>
+<p>As you can see in the above examples, in <code>border-box</code>, the specified width also includes padding width and border width.</p>
 
-<h1>box-sizing</h1>
-<p>If an element has a specified width, any padding added to that element will add to the total width of the element. This is often an undesirable result, as it requires that an element's width be recalculated each time the padding is adjusted. (Note that this also happens with height, but in most cases it is preferred not to give an element a set height.)</p>
-<pre>
-	.box {
-	    padding: 20px;
-	    width: 400px;
-	}
 
-	&lt;div class="box">&lt;/div>
-</pre>
-<div class="box">
-	<div style="width: 400px; padding: 20px; height: 50px; background: grey; display: flex; justify-content: center; align-items: center; color: #fff;">440px</div>
+
+
+
+
+
+
+
+<h2>content-box</h2>
+<p>This value is the default value. In this behaviour, the padding and border width pushes outwards of the specified width. For example, if you have a div of <code>100px</code> and there's a padding of <code>10px</code> and border of <code>10px</code> on both left and right side, then total width for that box would be <code>(100px + 10px + 10px + 10px + 10px) = 140px</code>. To  demonstrate the behaviour let's consider the same example, but this time the parent div contains <code>box-sizing: content-box;</code>.</p>
+<ol>
+	<li>The first div has no width specified. Without width specified, the div behaves like <code>border-box</code>. That means the padding and border width pushes inwards instead of outwards.</li>
+	<li>The second div has width specified of <code>100%</code>. But the padding and border makes the box bigger than 100% of its size. Because if you specify width in <code>content-box</code> behaviour, the padding and border width will always increase the box width.</li>
+	<li>Similarly, for third box, the width <code>800px</code> is specified. But total box width is bigger than <code>800px</code> as there's padding and border width is added.</li>
+	<li>Third div is exactly a <code>800px</code> width, just to compare the previous div to understand the effect.</li>
+</ol>
+<div class="SnippetDemo">
+	<div style="box-sizing: content-box;">
+		<div style="background: #ddd; padding: 50px; border: 10px solid red;">
+			<p style="margin: 0; text-align: justify;">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+		</div>
+		<div class="mt-4" style="background: #ddd; padding: 50px; border: 10px solid red; width: 100%;">
+			<p style="margin: 0; text-align: justify;">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+		</div>
+		<div class="mt-4" style="background: #ddd; padding: 50px; border: 10px solid red; width: 800px;">
+			<p style="margin: 0; text-align: justify;">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+		</div>
+		<div class="mt-4 has-text-centered" style="background: green; height: 28px; width: 800px; color: #fff;">800px</div>
+	</div>
 </div>
-<p>In this example, although the .box element is given an explicit width of 400px, the actual rendered width of the element on the page will be 440px. This takes into account not only the 400px width, but also the 20px of left padding and the 20px of right padding (defined with padding shorthand in the previous example).</p>
-<p>This happens in order to maintain 400px of content space, rather than 400px of total element width.</p>
-<p>To resolve this issue, thus keeping the width at 400px no matter the amount of padding, you can use the box-sizing property:</p>
-<pre>
-	.box {
-	 padding: 20px;
-	 width: 400px;
-	 box-sizing: border-box;
-	}
-	&lt;div class="box">&lt;/div>
-</pre>
-<div class="box">
-	<div style="width: 400px; padding: 20px; height: 50px; background: grey; display: flex; justify-content: center; align-items: center; color: #fff; box-sizing: border-box;">440px</div>
-</div>
-<p>This causes the element to maintain its width while increasing the padding, thus decreasing the available content space</p>
-<hr>
-<p>The original box model behavior was eventually considered unintuitive, so a new CSS property called box-sizing was created. When you set box-sizing: border-box; on an element, the padding and border of that element no longer increase its width.</p>
-<p>Since box-sizing is pretty new, you should use the -webkit- and -moz- prefixes for now, as I have in these examples.</p>
-<h3>content-box</h3>
-<p>The default value for box-sizing is content-box, which is what we are overriding here. There is also a padding-box value but... kinda useless if you ask me. We'll get to what this means shortly.</p>
-
-
-
-
-
-
 
 
 
