--- a/CSS/TOC.html
+++ b/CSS/TOC.html
@@ -51,7 +51,7 @@
 					</div>
 				</li>
 				<li>
-					<a href="Typography.html">Text Styling</a>
+					<a href="TextStyle.html">Text Styling</a>
 					<p class="small_desc">Learn what you can do with text.</p>
 					<div class="tags">
 						<div>color</div>
@@ -69,7 +69,100 @@
 						<div>quotes</div>
 					</div>
 				</li>
-				<li><a href="Fonts.html">font-style</a></li>
+				<li>
+					<a href="Fonts.html">Fonts</a>
+					<p class="small_desc">Learn how you can customize font in various way. Also learn how you can use custom web fonts.</p>
+					<div class="tags">
+						<div>font-style</div>
+						<div>font-size</div>
+						<div>font-family</div>
+						<div>font-weight</div>
+						<div>font-variant</div>
+						<div>font</div>
+						<div>Web Fonts: @font-face</div>
+					</div>
+				</li>
+			</ol>
+		</div>
+	</div>
+
+	<div class="card table_of_content">
+		<h1>Box Styling</h1>
+		<div>
+			<ol>
+				<li>
+					<a href="Padding.html">Padding</a>
+					<p class="small_desc">Learn how you can set padding on a box container.</p>
+					<div class="tags">
+						<div>padding</div>
+						<div>padding-top</div>
+						<div>padding-right</div>
+						<div>padding-bottom</div>
+						<div>padding-left</div>
+					</div>
+				</li>
+				<li>
+					<a href="Border.html">Border & Outline</a>
+					<p class="small_desc">Learn how you can set border on a box container.</p>
+					<div class="tags">
+						<div>border</div>
+						<div>border-width</div>
+						<div>border-color</div>
+						<div>border-style</div>
+						<div>border-top</div>
+						<div>border-bottom</div>
+						<div>border-left</div>
+						<div>border-right</div>
+						
+						<div>border-left-color</div>
+						<div>border-left-width</div>
+						<div>border-left-style</div>
+
+						<div>border-right-color</div>
+						<div>border-right-width</div>						
+						<div>border-right-style</div>
+
+						<div>border-top-color</div>
+						<div>border-top-width</div>
+						<div>border-top-style</div>
+
+						<div>border-bottom-color</div>
+						<div>border-bottom-width</div>
+						<div>border-bottom-style</div>
+
+						<div>border-radius</div>
+						<div>border-top-left-radius</div>
+						<div>border-top-right-radius</div>
+						<div>border-bottom-left-radius</div>
+						<div>border-bottom-right-radius</div>
+						<div>border-radius Two Values</div>
+						<div>Slash Operataor and Space Operator</div>
+						<div>Specify 8 value in border-radius</div>
+
+
+						<div>border-image</div>
+						<div>border-image-source</div>
+						<div>border-image-slice</div>
+						<div>border-image-width</div>
+						<div>border-image-outset</div>
+						<div>border-image-repeat</div>
+
+						<div>outline</div>
+						<div>outline-width</div>
+						<div>outline-style</div>
+						<div>outline-color</div>
+						<div>outline-offset</div>
+					</div>
+				</li>
+				<li>
+					<a href="BoxModel.html">Box Model</a>
+					<p class="small_desc">Learn the concept of box model in CSS.</p>
+					<div class="tags">
+						<div>box-sizing</div>
+						<div>border-box</div>
+						<div>content-box</div>
+					</div>
+				</li>
 			</ol>
 		</div>
 	</div>
@@ -384,25 +477,6 @@
 	</div>
 
 	<div class="Card">
-		<h1>Paddings</h1>
-		<div class="Content">
-			<a href="Padding.html">padding</a>
-			<a href="Padding.html">padding-left</a>
-			<a href="Padding.html">padding-right</a>
-			<a href="Padding.html">padding-top</a>
-			<a href="Padding.html">padding-bottom</a>
-		</div>
-	</div>
-
-	<div class="Card">
-		<h1>Box Model</h1>
-		<div class="Content">
-			<a href="BoxModel.html">Box Model</a>
-			<a href="BoxModel.html">box-sizing</a>
-		</div>
-	</div>
-
-	<div class="Card">
 		<h1>Flex Box</h1>
 		<div class="Content">
 			<a href="Flexbox.html">Flexbox</a>
@@ -433,54 +507,6 @@
 			<a href="Dimension.html">overflow</a>
 			<a href="Dimension.html">overflow-x</a>
 			<a href="Dimension.html">overflow-y</a>
-		</div>
-	</div>
-
-	<div class="Card">
-		<h1>Border</h1>
-		<div class="Content">
-			<a href="Border.html">border</a>
-			<a href="Border.html">border-top</a>
-			<a href="Border.html">border-bottom</a>
-			<a href="Border.html">border-left</a>
-			<a href="Border.html">border-right</a>
-			<a href="Border.html">border-width</a>
-			<a href="Border.html">border-color</a>
-			<a href="Border.html">border-style</a>
-			<a href="Border.html">border-left-color</a>
-			<a href="Border.html">border-left-width</a>
-			<a href="Border.html">border-left-style</a>
-			<a href="Border.html">border-right-width</a>
-			<a href="Border.html">border-right-color</a>
-			<a href="Border.html">border-right-style</a>
-			<a href="Border.html">border-top-width</a>
-			<a href="Border.html">border-top-color</a>
-			<a href="Border.html">border-top-style</a>
-			<a href="Border.html">border-bottom-width</a>
-			<a href="Border.html">border-bottom-color</a>
-			<a href="Border.html">border-bottom-style</a>
-			<a href="Border.html">border-radius</a>
-			<a href="Border.html">border-top-left-radius</a>
-			<a href="Border.html">border-top-right-radius</a>
-			<a href="Border.html">border-bottom-left-radius</a>
-			<a href="Border.html">border-bottom-right-radius</a>
-			<a href="Border.html">border-image</a>
-			<a href="Border.html">border-image-source</a>
-			<a href="Border.html">border-image-slice</a>
-			<a href="Border.html">border-image-width</a>
-			<a href="Border.html">border-image-outset</a>
-			<a href="Border.html">border-image-repeat</a>
-		</div>
-	</div>
-
-	<div class="Card">
-		<h1>Outline</h1>
-		<div class="Content">
-			<a href="Border.html">outline</a>
-			<a href="Border.html">outline-width</a>
-			<a href="Border.html">outline-style</a>
-			<a href="Border.html">outline-color</a>
-			<a href="Border.html">outline-offset</a>
 		</div>
 	</div>
 
