--- a/CSS/TextStyle.html
+++ b/CSS/TextStyle.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Typography</title>
+	<title>Text Styling</title>
 	<link rel="stylesheet" type="text/css" href="../Assets/bulma.css">
 	<link rel="stylesheet" type="text/css" href="../Assets/Style.css">
 </head>
