--- a/CSS/BoxModel.html
+++ b/CSS/BoxModel.html
@@ -15,7 +15,7 @@
 
 
 <h1>Box Model</h1>
-<p>Every element in web design is a rectangular box. Box Model specifies how CSS calculates a box's width and how you can change the default behaviour. The following picture demonstrate how border, padding and content are positioned within a box.</p>
+<p>Every element in web design is a rectangular box. Box Model specifies how CSS calculates a box's width and height, and how you can change the default behaviour. The following picture demonstrate how border, padding and content are positioned within a box.</p>
 <img src="Assets/img/firebox.png">
 <p>Following is the common formula for calculating total with of a box:</p>
 <ol>
@@ -28,7 +28,7 @@
 	<li>content-box</li>
 </ol>
 <p>If you apply <code>box-sizing</code> property, the behaviour applies to all child element inside it, unless any child element has it's own <code>box-sizing</code> value specified.</p>
-
+<p>Theh <code>box-sizing</code> behaviour equally applies to both <code>width</code> and <code>height</code>.</p>
 
 
 
