--- a/CSS/TOC.html
+++ b/CSS/TOC.html
@@ -82,6 +82,18 @@
 						<div>Web Fonts: @font-face</div>
 					</div>
 				</li>
+				<li>
+					<a href="Align.html">Alignment of Text</a>
+					<p class="small_desc">Learn how you can set alignment of text within a box element.</p>
+					<div class="tags">
+						<div>Center Horizontally - margin: auto;</div>
+						<div>Center Horizontally - text-align: center;</div>
+						<div>Center Vertically - Using padding</div>
+						<div>Center Vertically - Using line-height</div>
+						<div>Center Vertically - Using position & transform</div>
+						<div>vertical-align</div>
+					</div>
+				</li>
 			</ol>
 		</div>
 	</div>
@@ -155,12 +167,47 @@
 					</div>
 				</li>
 				<li>
+					<a href="Dimension.html">Dimension</a>
+					<p class="small_desc">Learn how you can specify width and height of a box element.</p>
+					<div class="tags">
+						<div>height</div>
+						<div>width</div>
+						<div>min-width</div>
+						<div>max-width</div>
+						<div>max-height</div>
+						<div>min-height</div>
+					</div>
+				</li>
+				<li>
 					<a href="BoxModel.html">Box Model</a>
 					<p class="small_desc">Learn the concept of box model in CSS.</p>
 					<div class="tags">
 						<div>box-sizing</div>
 						<div>border-box</div>
 						<div>content-box</div>
+					</div>
+				</li>
+				<li>
+					<a href="Overflow.html">Overflow</a>
+					<p class="small_desc">Learn how you can handle if content overflows a box element.</p>
+					<div class="tags">
+						<div>overflow</div>
+						<div>overflow-x</div>
+						<div>overflow-y</div>
+					</div>
+				</li>
+				<li>
+					<a href="Gradient.html">Gradient</a>
+					<p class="small_desc">Learn how you can specify gradient as background on a box element.</p>
+					<div class="tags">
+						<div>gradient</div>
+						<div>linear-gradient</div>
+						<div>repeating-leaner-gradient</div>
+						<div>radial-gradient</div>
+						<div>repeating-radial-gradient</div>
+						<div>Color Stops</div>
+						<div>Linear gradient direction</div>
+						<div>Radial gradient shape</div>
 					</div>
 				</li>
 			</ol>
@@ -249,18 +296,6 @@
 			<a href="Counters.html">Counter()</a>
 			<a href="Counters.html">counter-increment</a>
 			<a href="Counters.html">counter-reset</a>
-		</div>
-	</div>
-
-	<div class="Card">
-		<h1>Alignment</h1>
-		<div class="Content">
-			<a href="Align.html">Center Align Elements</a>
-			<a href="Align.html">Center Align Text</a>
-			<a href="Align.html">Center Vertically - Using padding</a>
-			<a href="Align.html">Center Vertically - Using line-height</a>
-			<a href="Align.html">Center Vertically - Using position & transform</a>
-			<a href="Align.html">vertical-align</a>
 		</div>
 	</div>
 
@@ -413,20 +448,6 @@
 	</div>
 
 	<div class="Card">
-		<h1>Gradient</h1>
-		<div class="Content">
-			<a href="Gradient.html">Gradient</a>
-			<a href="Gradient.html">linear-gradient</a>
-			<a href="Gradient.html">repeating-leaner-gradient</a>
-			<a href="Gradient.html">radial-gradient</a>
-			<a href="Gradient.html">repeating-radial-gradient</a>
-			<a href="Gradient.html">Color Stops</a>
-			<a href="Gradient.html">Linear gradient direction</a>
-			<a href="Gradient.html">Radial gradient shape</a>            
-		</div>
-	</div>
-
-	<div class="Card">
 		<h1>Shadow</h1>
 		<div class="Content">
 			<a href="Shadow.html">text-shadow</a>
@@ -495,20 +516,7 @@
 		</div>
 	</div>
 
-	<div class="Card">
-		<h1>Dimension</h1>
-		<div class="Content">
-			<a href="Dimension.html">height</a>
-			<a href="Dimension.html">width</a>
-			<a href="Dimension.html">min-width</a>
-			<a href="Dimension.html">max-width</a>
-			<a href="Dimension.html">max-height</a>
-			<a href="Dimension.html">min-height</a>
-			<a href="Dimension.html">overflow</a>
-			<a href="Dimension.html">overflow-x</a>
-			<a href="Dimension.html">overflow-y</a>
-		</div>
-	</div>
+	
 
 	
 	<div class="Skipping">
